# openenv-final-

./: .gitignore.txt  Dockerfile  Dockerfile.txt  inference.py  main.py  openenv.yaml  package-lock.json  package.json  pyproject.toml  requirements.txt
public/: index.html
server/: app.py
src/: App.js
